<resources>
    <string name="app_name">UniGO</string>
    <string name="selected_marker">Selected marker</string>
    <string name="snackbar_warning_location_permission">No location warning</string>
    <string name="select_location">Select Location</string>
    <string name="calculating_route">Calculating route...</string>
    <string name="route_calculated">Route Calculated</string>
    <string name="location_not_available">Location not available.</string>
    <string name="destination_marker">Destination Marker</string>
    <string name="calculate_route">Calculate Route</string>
    <string name="no_destination_selected">No destination selected.</string>
    <string name="logo_description">Logo</string>
    <string name="zoom_in">zoom in</string>
    <string name="zoom_out">zoom out</string>
    <string name="center">Center view</string>
    <string name="ruta">"Ruta: "</string>
    <string name="parada_des">Parada desconocida</string>
    <string name="no_info_rutas">No hay información de rutas</string>
    <string name="rutas">"Rutas: "</string>
    <string name="perfil_no_soport">"Perfil no soportado: "</string>
    <string name="err_ruta">Error al obtener la ruta:</string>
    <string name="err_respuesta">Error en la respuesta:</string>
    <string name="no_rutas">No se encontró ninguna ruta</string>
    <string name="err_proc_resp">Error al procesar la respuesta:</string>
    <string name="a_pie">A pie</string>
    <string name="autobus">Autobús</string>
    <string name="Bici">Bicicleta</string>
    <string name="bike_parking_id">ID: %1$s</string>
    <string name="bus_stops">Paradas de autobús</string>
    <string name="bus_stop">Parada de bus</string>
    <string name="bike_parkings">Parkings de bicicletas</string>
    <string name="bike_parking">Parking de bicis</string>
    <string name="coords_format">Coordenadas: %.5f, %.5f</string>
    <string name="idioma">Idioma</string>
    <string name="route_options">Opciones de ruta</string>
    <string name="public_libraries">Librerías públicas</string>
    <string name="library">Librería</string>
    <string name="more">Leer más...</string>
    <string name="selec_idioma">Seleccionar idioma</string>
    <string name="cancelar">Cancelar</string>
    <string name="schedule">Horario regular</string>
    <string name="summer_schedule">Horario de verano</string>
    <string name="address">Dirección</string>
    <string name="close">Cerrar</string>
    <string name="no_data">No hay datos disponibles</string>
    <string name="resumen">Resumen meteorológico</string>
    <string name="icon">Icono</string>
    <string name="mediciones">Mediciones</string>
    <string name="map">Cambiar mapa</string>
    <string name="Minimalista">Minimalista</string>
    <string name="Detallado">Detallado</string>
    <string name="Satelite">Satélite</string>
    <string name="Tema">Tema</string>
    <string name="tema_sistema">Tema del dispositivo</string>
    <string name="tema_claro">Tema claro</string>
    <string name="tema_oscuro">Tema oscuro</string>
    <string name="menu_tema">Selecciona el tema a utilizar</string>
    <string name="forecast">Previsión</string>
    <string name="forecast_title">Previsión meteorológica</string>
    <string name="day_today">Hoy</string>
    <string name="day_tomorrow">Mañana</string>
    <string name="day_next">Pasado mañana</string>
    <string name="day_unknown">Desconocido</string>
</resources>