<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_idioma"
        android:icon="@drawable/translate_24px"
        android:title="@string/idioma"
        android:iconTint="@color/onSurface"/>
    <item
        android:id="@+id/nav_mapa"
        android:icon="@drawable/map"
        android:title="@string/map"
        android:iconTint="@color/onSurface"/>

    <item
        android:id="@+id/nav_tema"
        android:icon="@drawable/theme_light_dark"
        android:title="@string/Tema"
        android:iconTint="@color/onSurface"/>

    <item
        android:id="@+id/nav_tiempo"
        android:icon="@drawable/weather_partly_cloudy"
        android:title="@string/forecast"
        android:iconTint="@color/onSurface"/>

</menu>